Alteração da fonte

--- a/index.css
+++ b/index.css
@@ -46,6 +46,7 @@ body {
   font-weight: 900;
   font-size: 30px;
   font-style: italic;
+  font-family: 'Mortal Kombat', sans-serif;
   color: #e0e0e0;
 }
 
